--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "npx playwright test --ui"
   },
   "prettier": {
     "printWidth": 100,
@@ -33,11 +34,16 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^21.1.0",
     "@angular/build": "^21.0.4",
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.0",
-    "jsdom": "^27.1.0",
+    "@playwright/test": "^1.57.0",
+    "@testing-library/angular": "^19.0.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitest/ui": "^4.0.17",
+    "jsdom": "^27.4.0",
     "typescript": "~5.9.2",
-    "vitest": "^4.0.8"
+    "vitest": "^4.0.17"
   }
 }
